--- a/my-pet/dog-game/src/components/Title/Title.css
+++ b/my-pet/dog-game/src/components/Title/Title.css
@@ -1,13 +1,12 @@
 .titlebox {
-    background-image: url('/img/dogs_bg_denim.jpg');
+    background-image: url('/img/waterdog.jpg');
     background-size: 100%;
     background-repeat: no-repeat;
     width: 100%;
     min-height: 280px;
     text-align: center;
     vertical-align: center;
-    /* opacity: 0.3; */
-    /* filter: alpha(opacity=30); */
+    
     font-family: 'Holtwood One SC', serif;
     color: #fff;
     text-shadow: 0 0 5px #000;
